[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
rand_core = "0.9.3"
rand_xoshiro = "0.7.0"
seq-macro = "0.3.6"
sha2 = "0.10.9"
curve25519-dalek = { version = "4.1.3", features = ["precomputed-tables"] }

[dev-dependencies]
hex = "0.4.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "base58"
harness = false

[[bench]]
name = "xoshiro"
harness = false

[[bench]]
name = "sha512"
harness = false

[[bench]]
name = "ed25519"
harness = false
